@@ -127,7 +127,7 @@ void wbxml_tree_clb_wbxml_characters(void *ctx, WB_UTINY *ch, WB_ULONG start, WB
     switch (wbxml_tree_node_get_syncml_data_type(tree_ctx->current)) {
     case WBXML_SYNCML_DATA_TYPE_WBXML:
         /* Deal with Embedded SyncML Documents - Parse WBXML */
-        if (wbxml_tree_from_wbxml(ch + start, length, WBXML_LANG_UNKNOWN, &tmp_tree) != WBXML_OK) {
+        if (wbxml_tree_from_wbxml(ch + start, length, WBXML_LANG_UNKNOWN, tree_ctx->tree->orig_charset, &tmp_tree) != WBXML_OK) {
             /* Not parsable ? Just add it as a Text Node... */
             goto text_node;
         }
